# SMR

./: .gitignore  CMakeLists.txt  README.md
src/: BlockPattern.cpp  BlockPattern.h  BlockPatternLoader.cpp  BlockPatternLoader.h  Plugin.cpp
